--- a/wacko/themes/wakka/css/wacko.css
+++ b/wacko/themes/wakka/css/wacko.css
@@ -92,14 +92,19 @@ del.diff {
 
 /* Code areas: SYNTAX %%code%% */
 
-.code {
-  background: #FFFFFF;
-  border: 1px #888888 solid;
-  font-family: "Courier New";
-  font-size: 10pt;
-  margin:1em 1.75em;
-  overflow:auto;
-  padding:0.25em;
+.code, .code-break {
+	background: #FFFFFF;
+	border: 1px #888888 solid;
+	font-family: "Courier New";
+	font-size: 10pt;
+	margin:1em 1.75em;
+	overflow:auto;
+	padding:0.25em;
+}
+
+.code-break {
+	white-space: pre;           /* CSS 2.0 */
+	white-space: pre-wrap;      /* CSS 2.1 */
 }
 
 .notes {  color: #888800; }
